--- a/.github/workflows/vcpkg_ci.yml
+++ b/.github/workflows/vcpkg_ci.yml
@@ -88,7 +88,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [
-          'macos-11.0'
+          'macos-10.15'
           ]
         llvm: [
           '11'
@@ -125,7 +125,7 @@ jobs:
       - name: Store the TGZ package
         uses: actions/upload-artifact@v1
         with:
-          name: macos-11.0_llvm${{ matrix.llvm }}_tgz_package
+          name: ${{ matrix.os }}_llvm${{ matrix.llvm }}_tgz_package
           path: ${{ steps.package_names.outputs.TGZ_PACKAGE_PATH }}
 
 
@@ -190,7 +190,7 @@ jobs:
   release_macos:
     # Do not run the release procedure if any of the builds has failed
     needs: [ build_linux, build_mac ]
-    runs-on: 'macos-11.0'
+    runs-on: 'macos-10.15'
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
 
     steps:
@@ -212,10 +212,10 @@ jobs:
 
       - name: Group the packages by platform
         run: |
-          zip -r9 rellic_macos-11.0_packages.zip \
-                  macos-11.0*
+          zip -r9 rellic_macos-10.15_packages.zip \
+                  macos-10.15*
 
-      - name: Upload the macOS 11.0 packages
+      - name: Upload the macOS 10.15 packages
         uses: actions/upload-release-asset@v1
 
         env:
@@ -223,6 +223,6 @@ jobs:
 
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: rellic_macos-11.0_packages.zip
-          asset_name: rellic_macos-11.0_packages.zip
+          asset_path: rellic_macos-10.15_packages.zip
+          asset_name: rellic_macos-10.15_packages.zip
           asset_content_type: application/gzip
