--- a/.github/workflows/vcpkg_ci.yml
+++ b/.github/workflows/vcpkg_ci.yml
@@ -63,6 +63,7 @@ jobs:
           # Run tests manually (kinda ugly, so use CMake way)
           CLANG_BIN="$(find ../../pre-built-llvm-${{ matrix.llvm }} -name clang | grep "bin/clang")"
           ../scripts/roundtrip.py "./tools/rellic-decomp-${{ matrix.llvm }}.0" ../tests/tools/decomp "${CLANG_BIN}"
+          ../scripts/roundtrip.py --translate-only "./tools/rellic-decomp-${{ matrix.llvm }}.0" ../tests/tools/decomp/failing-rebuild "${CLANG_BIN}"
 
       - name: Locate the packages
         id: package_names
@@ -123,6 +124,7 @@ jobs:
           # Run tests manually (kinda ugly, so use CMake way)
           CLANG_BIN="$(find ../../pre-built-llvm-${{ matrix.llvm }} -name clang | grep "bin/clang")"
           ../scripts/roundtrip.py "./tools/rellic-decomp-${{ matrix.llvm }}.0" ../tests/tools/decomp "${CLANG_BIN}"
+          ../scripts/roundtrip.py --translate-only "./tools/rellic-decomp-${{ matrix.llvm }}.0" ../tests/tools/decomp/failing-rebuild "${CLANG_BIN}"
       - name: Locate the packages
         id: package_names
         shell: bash
