Fixes unittest building and doctest integration

--- a/libraries/doctest/CMakeLists.txt
+++ b/libraries/doctest/CMakeLists.txt
@@ -8,5 +8,5 @@
 
 add_library(thirdparty_doctest INTERFACE)
 target_include_directories(thirdparty_doctest INTERFACE
-  "${CMAKE_CURRENT_SOURCE_DIR}/src/doctest"
+  "${CMAKE_CURRENT_SOURCE_DIR}/src"
 )
