--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -15,4 +15,8 @@ target_link_libraries(${RELLIC_UNITTEST} PRIVATE
 
 add_project_properties(${RELLIC_UNITTEST})
 
-set(RELLIC_UNITTEST ${RELLIC_UNITTEST} PARENT_SCOPE)
+add_test(
+  NAME test_${RELLIC_UNITTEST}
+  COMMAND "$<TARGET_FILE:${RELLIC_UNITTEST}>"
+  WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}"
+)
