--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -6,6 +6,7 @@ set(RELLIC_UNITTEST ${PROJECT_NAME}-unittest-${RELLIC_LLVM_VERSION})
 
 add_executable(${RELLIC_UNITTEST}
   AST/ASTBuilder.cpp
+  UnitTest.cpp
 )
 
 target_link_libraries(${RELLIC_UNITTEST} PRIVATE
