--- a/rellic/CMakeLists.txt
+++ b/rellic/CMakeLists.txt
@@ -1,9 +1,9 @@
-add_library(${PROJECT_NAME} STATIC
+add_library(${PROJECT_NAME}
   AST/Compat/ASTContext.cpp
   AST/Compat/Expr.cpp
   AST/Compat/Mangle.cpp
   AST/Compat/Stmt.cpp
-  
+
   AST/CXXToCDecl.cpp
   AST/InferenceRule.cpp
   AST/DeadStmtElim.cpp
@@ -18,7 +18,7 @@ add_library(${PROJECT_NAME} STATIC
   AST/Z3CondSimplify.cpp
   AST/Z3ConvVisitor.cpp
   AST/ReachBasedRefine.cpp
-  
+
   BC/Util.cpp
   BC/Compat/Value.cpp
 )
