--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -247,8 +247,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install dependencies
       run: |
-        apt-get update
-        apt-get install -y cmake ninja-build libgflags-dev libgoogle-glog-dev libz3-dev zlib1g-dev git llvm-dev clang libclang-dev
+        sudo apt-get update
+        sudo apt-get install -y cmake ninja-build libgflags-dev libgoogle-glog-dev libz3-dev zlib1g-dev git llvm-dev clang libclang-dev
     - name: Build
       run: |
         mkdir build && cd build
