--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
           env CTEST_OUTPUT_ON_FAILURE=1 cmake --build . --target test
 
           # Run tests manually (kinda ugly, so use CMake way)
-          CLANG_BIN="$(find ../../pre-built-llvm-${{ matrix.llvm }} -name clang | grep "tools/llvm/clang")"
+          CLANG_BIN="$(find ../../pre-built-llvm-${{ matrix.llvm }} -path "*/tools/llvm-${{ matrix.llvm }}/clang" -exec readlink -f {} \; )"
           ../scripts/roundtrip.py "./tools/rellic-decomp-${{ matrix.llvm }}.0" ../tests/tools/decomp "${CLANG_BIN}"
           ../scripts/roundtrip.py --translate-only "./tools/rellic-decomp-${{ matrix.llvm }}.0" ../tests/tools/decomp/failing-rebuild "${CLANG_BIN}"
 
@@ -122,9 +122,10 @@ jobs:
           env CTEST_OUTPUT_ON_FAILURE=1 cmake --build . --target test
 
           # Run tests manually (kinda ugly, so use CMake way)
-          CLANG_BIN="$(find ../../pre-built-llvm-${{ matrix.llvm }} -name clang | grep "tools/llvm/clang")"
+          CLANG_BIN="$(find ../../pre-built-llvm-${{ matrix.llvm }} -path "*/tools/llvm-${{ matrix.llvm }}/clang" -exec readlink -f {} \; )"
           ../scripts/roundtrip.py "./tools/rellic-decomp-${{ matrix.llvm }}.0" ../tests/tools/decomp "${CLANG_BIN}"
           ../scripts/roundtrip.py --translate-only "./tools/rellic-decomp-${{ matrix.llvm }}.0" ../tests/tools/decomp/failing-rebuild "${CLANG_BIN}"
+
       - name: Locate the packages
         id: package_names
         shell: bash
