--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "tests/lifting-tool-ci"]
-	path = tests/lifting-tool-ci
+	path = tests/lifting-tools-ci
 	url = git@github.com:lifting-bits/lifting-tools-ci.git
 	branch = master
