--- a/.github/workflows/anghabench.yml
+++ b/.github/workflows/anghabench.yml
@@ -26,10 +26,15 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: true
-
+    # https://stackoverflow.com/questions/58033366/how-to-get-current-branch-within-github-actions
+    - name: Extract branch name
+      shell: bash
+      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      id: extract_branch
     - name: Run against ${{ matrix.llvm }}
       run: |
-        tests/lifting-tools-ci/cloud/run-do-droplet.py --name "Rellic CI Run from GHA" --script tests/ci-scripts/run-on-anghabench.sh --env-vars RUN_SIZE=1k,RELLIC_BRANCH=${GITHUB_REF##*/},LLVM_VERSION=${{ matrix.llvm }}
+        tests/lifting-tools-ci/cloud/run-do-droplet.py --name "Rellic CI Run from GHA" --script tests/ci-scripts/run-on-anghabench.sh --env-vars RUN_SIZE=1k,RELLIC_BRANCH=${BRANCH},LLVM_VERSION=${{ matrix.llvm }}
       env:
         SLACK_HOOK: ${{ secrets.SLACK_HOOK }}
         DO_TOKEN: ${{ secrets.DO_TOKEN }}
+        BRANCH: ${{ steps.extract_branch.outputs.branch }}
