--- a/.github/workflows/anghabench-after-build.yml
+++ b/.github/workflows/anghabench-after-build.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   AnghaSmallRun:
-    if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name = 'schedule' }}
+    if: github.event_name = 'schedule' || github.event.workflow_run.conclusion == 'success' 
     runs-on: ubuntu-latest
     strategy:
       matrix:
