Refactor Clang AST building and fix typing in all representations (#121)
* Removes InitCompilerInstance in favor of clang::buildASTFromCodeWithArgs()

* Adds ASTBuilder and basic outline of methods for creating literals

* Fixes issues around floating point literal translation

* Initial commit for unit testing via doctest

* Adds .gitmodules
* Adds doctest as a submodule
* Adds `unittest/` that mirrors the folder structure of `rellic/`

* Removes .gitmodules

* Fixes doctest submodule

* Fixes unittest building and doctest integration

* Replace license headers with a reference to LICENSE.md

* Fixes compatibility issues with llvm-9

* Fixes compat with older z3 versions

* Adds missing file.

* I really hope this one passes. I'm getting sick of the GH spam.

* Updates CI files to enable git submodules

* Enables submodules on macos. Deletes old CI workflow due to old z3 version.

* Fixes compatibility with older z3 versions

* Adds unit tests for literal creating methods

* Factors out clang::ASTUnit creation code

* Replaces CreateStringLiteral and CreateCharacterLiteral with ASTBuilder methods

* [WIP] Replacing CreateIntegerLiteral

Replaces some CreateIntegerLiteral with ASTBuilder methods

* Replace CreateIntegerLiteral

* Replaced rest of CreateIntegerLiteral uses
* Replaced CreateNullPointerExpr
* Replaced CreateUndefExpr
* Replaced CreateTrue

* Adds unit tests for CreateCStyleCast()

* Upgrades usage of passing of ASTContext to ASTUnit

* Introduces clang::Sema to ASTBuilder

* Implements unit tests fro ASTBuilder::CreateCStyleCast

* Implements first attempt at ASTBuilder::CreateCStyleCast

* Replaces usage clang::ASContext with clang::ASTUnit

* Replaces creation of variables and some unary ops

* CreateVarDecl, DeclRefExpr, DeclStmt
* CreateUnaryOperator for UO_Deref and UO_AddrOf
* Misc unit test improvements

* Fixes handling of 128 bit integet literals

* Enables git submodules i

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,7 @@
-[submodule "tests/lifting-tool-ci"]
+[submodule "libraries/doctest/src"]
+	path = libraries/doctest/src
+	url = https://github.com/onqtam/doctest.git
+[submodule "libraries/lifting-tool-ci"]
 	path = libraries/lifting-tools-ci
-	url = git@github.com:lifting-bits/lifting-tools-ci.git
+	url = https://github.com/lifting-bits/lifting-tools-ci.git
 	branch = master
