--- a/rellic/CMakeLists.txt
+++ b/rellic/CMakeLists.txt
@@ -1,9 +1,9 @@
 add_library(${PROJECT_NAME} STATIC
   AST/Compat/ASTContext.cpp
-  AST/Compat/Expr.cpp
   AST/Compat/Mangle.cpp
   AST/Compat/Stmt.cpp
   
+  AST/ASTBuilder.cpp
   AST/CXXToCDecl.cpp
   AST/InferenceRule.cpp
   AST/DeadStmtElim.cpp
