--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,10 @@
-# Copyright (c) 2018 Trail of Bits, Inc.
 #
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
+# Copyright (c) 2021-present, Trail of Bits, Inc.
+# All rights reserved.
 #
-#     http://www.apache.org/licenses/LICENSE-2.0
+# This source code is licensed in accordance with the terms specified in
+# the LICENSE file found in the root directory of this source tree.
 #
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
 
 # Fix behavior of CMAKE_CXX_STANDARD when targeting macOS.
 if (POLICY CMP0025)
@@ -124,6 +118,12 @@ macro(add_project_properties target)
 endmacro()
 
 #
+# third party libraries
+#
+
+add_subdirectory(libraries)
+
+#
 # rellic libraries
 #
 
@@ -140,6 +140,8 @@ add_subdirectory(tools)
 #
 
 enable_testing()
+
+add_subdirectory(unittests)
 
 find_package(Clang CONFIG REQUIRED)
 get_target_property(CLANG_PATH clang LOCATION)
