--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,8 @@ name: VCPKG Continuous Integration
 
 on:
   # Run this workflow once every 6 hours against the master branch
-  schedule:
-   - cron: "0 */6 * * *"
+  #schedule:
+  # - cron: "0 */6 * * *"
 
   push:
     branches:
